<resources>
    <string name="app_name">Pod Adddict</string>
    <string name="title_podcast_detail">PodCast Detail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="transition_photo">transition_photo</string>
    <string name="lorum_ipsum">Artisan pickled freegan keytar High Life, roof party slow-carb Thundercats post-ironic. Bespoke sriracha taxidermy skateboard, yr PBRB jean shorts keytar post-ironic direct trade Banksy locavore selvage Vice four dollar toast. Wolf cardigan ugh gastropub. Pinterest Williamsburg Echo Park before they sold out tattooed. Tousled sriracha narwhal sustainable. Kale chips four dollar toast mumblecore gastropub Thundercats Brooklyn High Life, messenger bag tofu actually. Freegan drinking vinegar pug selfies gentrify.\n\nPolaroid photo booth Wes Anderson, wolf plaid tilde lo-fi. Godard Wes Anderson PBRB normcore. Pop-up mustache meh, wayfarers yr Odd Future food truck skateboard. Sriracha meggings next level VHS, gluten-free chia lumbersexual messenger bag art party Thundercats listicle. Pour-over heirloom cornhole direct trade fingerstache, disrupt Thundercats next level semiotics Banksy listicle narwhal Odd Future pork belly fixie. Squid Intelligentsia Bushwick disrupt direct trade +1, artisan photo booth meditation forage you probably haven\'t heard of them cray. Salvia lo-fi scenester banh mi, Schlitz irony vegan XOXO fashion axe street art bicycle rights keytar polaroid disrupt farm-to-table.\n\nForage Thundercats vegan, whatever synth tote bag lomo wayfarers locavore drinking vinegar Odd Future YOLO you probably haven\'t heard of them PBR. Shabby chic hella hoodie, lumbersexual keytar iPhone viral Vice gentrify seitan. You probably haven\'t heard of them asymmetrical flannel, Pinterest fanny pack Wes Anderson readymade typewriter post-ironic single-origin coffee Shoreditch biodiesel leggings. Twee mumblecore lo-fi, synth lomo gluten-free McSweeney\'s Pitchfork gastropub American Apparel. Gluten-free small batch tilde PBR occupy. Fashion axe yr meh, gentrify lo-fi chambray lomo drinking vinegar fap salvia irony tilde health goth trust fund. Authentic Intelligentsia YOLO, Blue Bottle McSweeney\'s yr fashion axe butcher Williamsburg.\n\nSustainable actually fashion axe slow-carb, whatever Intelligentsia sartorial PBRB bespoke 90\'s cold-pressed. Disrupt slow-carb church-key, Banksy four loko hashtag sartorial tote bag. Gastropub banh mi twee, four loko kogi distillery plaid yr. Fixie Neutra chillwave bicycle rights, readymade art party 90\'s Bushwick salvia pickled McSweeney\'s. XOXO gastropub tote bag, meggings Pinterest locavore roof party. Try-hard before they sold out mlkshk wayfarers pop-up Truffaut. Asymmetrical actually fixie, sartorial raw denim brunch mixtape.</string>

    <!--Menu Title Strings -->
    <string name="add_subscription">Add Subscription</string>
    <string name="title_podcasts">Podcasts</string>
    <string name="title_discover">Discover</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_share">Share</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">podadddict.thomaskioko.com</string>
    <string name="content_authority">com.thomaskioko.podadddict</string>

    <!-- Button Text -->
    <string name="button_subscribe">Subscribe</string>
    <string name="button_subscribed">Open</string>

    <!-- Dummy Data -->
    <string name="podcast_description">Twice-monthly community updates for the small desert town of Night Vale, featuring local weather, news, announcements from the Sheriff\'s Secret Police, mysterious lights in the night sky, dark hooded figures with unknowable powers, and cultural events. Turn on your radio and hide. Never listened before? It\'s an ongoing radio show. Start with the current episode, and you\'ll catch on in no time. Or, go right to Episode 1 if you wanna binge-listen. (Produced by Night Vale Presents. Written by Joseph Fink and Jeffrey Cranor. Narrated by Cecil Baldwin. On Twitter as NightValeRadio)</string>

    <!-- Messages -->
    <string name="loading">Loading …</string>

    <!-- Error Messages -->
    <string name="error_no_internet_connection">No internet connection!</string>
    <string name="error_no_message">Something went wrong on our end!</string>
    <string name="error_no_data">No Data!</string>
    <string name="error_db_message">Could not fetch data!</string>

    <!-- Toolbar Titles -->
    <string name="title_add_podcast">Add Podcast</string>
    <string name="title_player">Music Player</string>
    <string name="new_label">New</string>

    <!-- Time Strings -->
    <string name="time_seconds">seconds</string>
    <string name="time_minutes">minutes</string>
    <string name="time_hours">hours</string>
    <string name="duration">%1$d:%2$02d</string>

    <!-- playback view !-->
    <string name="playback_view_time">%1$02d:%2$02d</string>
    <string name="playback_view_title">&lt;b>%1$s&lt;/b> - %2$s</string>

    <!-- Plurals -->
    <plurals name="time_seconds_quantified">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="time_minutes_quantified">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_hours_quantified">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <!-- toast !-->
    <string name="toast_track_added">Added to the playlist. Touch again to play now.</string>

    <string name="play_label">Play</string>
    <string name="no_media_playing_label">No media playing</string>
    <string name="title_trrack_name">Chapter 8: When it begins</string>
    <string name="title_artist">NPR Radio</string>
    <string name="title_description">Description</string>
    <string name="title_publish_date">Mon, 17 Oct 2016</string>
    <string name="title_artist_name">by NPR Radio</string>
    <string name="text_time">0:00</string>

    <!-- Analytics Categories -->
    <string name="action_category_stream">Stream</string>
    <string name="action_category_download">Download</string>
    <string name="action_category_gcm">GCM Registration</string>


    <!-- Analytics Actions -->
    <string name="action_action_stream">Stream Music</string>
    <string name="action_action_download">Download Music</string>
    <string name="action_action_fcm_complete">Firebase Registration Complete</string>
    <string name="text_title">Title</string>

    <!-- Content Description Text -->
    <string name="content_description_download_podcast">Download podcast</string>
    <string name="content_description_play_episode">Play episode</string>
    <string name="content_description_close_player">Close player</string>
    <string name="content_description_play_or_pause_music">Play or pause music</string>
    <string name="content_description_app_icon">App Icon</string>
    <string name="content_description_previous_episode">Previous episode</string>
    <string name="content_description_next_episode">Next episode</string>
    <string name="content_description_pause_episode">Pause episode</string>
    <string name="content_description_art_work">Podcast artwork</string>
    <string name="content_description_subscribe_to_podcast">Subscribe to podcast</string>
    <string name="content_description_number_or_podcasts">Number or podcasts</string>
    <string name="content_description_shuffle_playlist">Shuffle playlist</string>
    <string name="content_description_add_to_favorite">Add to favorite</string>
    <string name="content_description_playlist">Playlist</string>

    <!-- Share message -->
    <string name="share_message">Check out PodAdddict on the PlayStore.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conetent_description_drag_view">Drag View</string>

    <!-- TODO: Delete after data has been loaded. This is for test purposes -->
    <array name="dummy_items">
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
        <item>@string/title_trrack_name</item>
    </array>

</resources>
