<?xml version="1.0" encoding="utf-8"?><!--suppress ALL -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>

        <item
            android:id="@+id/nav_action_poscasts"
            android:icon="@drawable/ic_podcast_24dp"
            android:title="@string/title_podcasts"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_action_discover"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/title_discover" />

    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_action_downloads"
                android:icon="@drawable/ic_file_download_24dp"
                android:title="@string/title_downloads" />

            <item
                android:id="@+id/nav_action_favorite"
                android:icon="@drawable/ic_star_24dp"
                android:title="@string/title_favorites" />
        </menu>
    </item>

</menu>