<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="#111">

    <ImageView
        android:id="@+id/image_in_notification"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/content_description_art_work"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/image_in_notification"
        android:orientation="horizontal">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/title_in_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="@integer/max_line"
                android:text="@string/title_trrack_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/artist_in_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="@integer/max_line"
                android:text="@string/title_artist"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/btn_prev_in_notification"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/content_description_previous_episode"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                android:id="@+id/btn_pause_play_in_notification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/content_description_play_or_pause_music"
                android:src="@drawable/ic_pause_white_48dp" />

            <ImageView
                android:id="@+id/btn_next_in_notification"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/content_description_next_episode"
                android:src="@drawable/ic_skip_next_white_48dp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
