<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.thomaskioko.podadddict.app.ui.fragments.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/description_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title_trrack_name"
            android:maxLines="@integer/max_line"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/description_artist"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:text="@string/title_artist_name"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/text_size_micro" />

        <TextView
            android:id="@+id/description_date"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="start"
            android:text="@string/title_publish_date"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/text_size_micro" />

        <TextView
            android:id="@+id/podcast_summary"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/podcast_description"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>

</FrameLayout>
